[package]
name = "txtv"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A simple and fast terminal client for browsing Swedish Text TV"
repository = "https://github.com/uherman/txtv"
readme = "README.md"
exclude = [
	"assets/*"
]

[dependencies]
colored = "3.0.0"
reqwest = { version = "0.12.15", features = ["blocking"] }
scraper = "0.23.1"
base64 = "0.22.1"
crossterm = "0.29.0"
image = "0.25.6"
viuer = "0.9.1"
